2007-12-10  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/src/ldpc_bersim_awgn.cpp: Changed tutorial so it
	counts bit errors in entire block, not only systematic bits

	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: Fixed spelling error
	
2007-12-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* m4/acx_blas.m4: Improve autodetection of ACML libraries

	* itpp/base/algebra/qr.cpp: Fix incorrect precalculation of the
	workspace size for QR decomp.

	The size of the workspace memory is now checked for each of
	[dz]gerf_, [dz]orgqr_, [dz]geqp3_ and [dz]ungqr_ funcitions
	separately, because they operate on different matrices. Besides,
	R is now correctly initialised with A before quering for the
	workspace size.

	* itpp/base/algebra/svd.cpp: Improvements in calculation of the
	SVD workspace size

	Before resizing the current memory allocated for SVD workspace,
	check if the workspace query was sucessful. If not, use the
	default, but not optimum workspace size.

2007-12-09  Simon Wood  <sgwoodjr@users.sourceforge.net>

	* itpp/base/algebra/qr.cpp, itpp/base/algebra/svd.cpp: Added a
	workspace query for each of the SVD and QR routines

	The query returns the optimal value of the memory workspace size
	used in SVD and QR decompositions. Setting the workspace size to
	an optimum value greatly improves the speed of calculations.

2007-12-08  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/src/ldpc_bersim_awgn.cpp: Fixes in tutorial
	examples.

2007-12-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.am, configure.ac.in, doc/local/linking.doc,
	itpp_debug.pc.in: Provide itpp_debug.pc pkg-config's file

	This additional file can be used to obtain the debugging compiler
	flags and libraries. It is only installed, when IT++ is configured
	with the --enable-debug option.

2007-12-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, doc/local/installation.doc: Installation manual updated